# PGINN

./: .gitignore  README.md  pyproject.toml
PGINN/: __init__.py
PGINN/dose_engine/: DoseEngine.py
PGINN/engine_evaluation/: pygamma.py
PGINN/nn_models/: __init__.py  base.py  pytorch_models.py  tensorflow_models.py
PGINN/nn_models/iDOTA/: blocks.py  loss.py  model_io.py  models.py
PGINN/raydose/: RaydoseComposer.py  ct_image_processor.py  dicom_processor.py  general_utils.py  geometry_utils.py  gpu_raydose_calculator.py  legacy_pipeline.py  oblique_reformat.py  ssd_calculator.py
PGINN/utils/: cuda_array_operations.py  general_functions.py  timing.py
